docs: improve
